--- a/vignettes/Session_1_sequencing_assays.Rmd
+++ b/vignettes/Session_1_sequencing_assays.Rmd
@@ -837,8 +837,6 @@ brain_reference_list <- lapply(unique(brain_reference$dataset_id), function(x) b
 dec = scran::modelGeneVar(brain_reference, subset.row = genes, block = brain_reference$sample_id)
 hvg_CAQ = scran::getTopHVGs(dec, n = 1000)
             
-
-
 hvg_CAQ = unique( unlist(hvg_CAQ))
 
 head(hvg_CAQ)
@@ -853,6 +851,12 @@ spatial_data_gene_name = logNormCounts(spatial_data_gene_name)
 ```
 
 We then identify and score relevant marker genes based on their expression and significance across different cell types. The result is a curated list of high-potential marker genes, organised and ready for deeper analysis and interpretation in the context of spatial gene expression patterns.
+
+::: {.note}
+This function provides a convenience wrapper for marker gene identification between groups of cells, based on running `pairwiseTTests.` 
+
+This function represents a simpler and more intuitive summary of the differences between the groups. We do this by realizing that the p-values for these types of comparisons are largely meaningless; individual cells are not meaningful units of experimental replication, while the groups themselves are defined from the data. Thus, by discarding the p-values, we can simplify our marker selection by focusing only on the effect sizes between groups.
+:::
 
 ```{r}
 mgs <- scran::scoreMarkers(
